# anton

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt  test.py
.github/workflows/: python-package.yml
anton/: __init__.py  anton.py  background_thread.py  config.py  config_manager.py  constants.py  format.py  injector.py  league_client.py  league_connection.py  main.py  out_window.py  root_gui.py  window.py  windows_utils.py
anton/configs/: config.py  preferences.py
anton/gui/: out_frame.py  root_gui.py
anton/gui/themes/: dark-blue.json
shaco/: Cargo.toml  pyproject.toml
shaco/src/: lib.rs
