[tool.poetry]
name = "anton"
version = "0.1.0"
description = "AIO LoL Tool"
authors = ["lipeeeee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keyboard = "^0.13.5"
pytest = "^7.3.2"
customtkinter = "^5.1.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
